--- a/main.tex
+++ b/main.tex
@@ -30,12 +30,13 @@ CGPA:8.67(Pursuing) till 6th sem
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Address}
 \noindent\rule{5cm}{0.4pt}
-\\
+
 Luxmi Nagar,Camp Yamuna Nagar \\
 Haryana, Pincode-135001, India \\
 Mob: +91-7404899901 \\
-Email: \textbf{\href{mailto:vishalkathpalia99@gmail.com}{vishalkathpalia99@gmail.com}} \\
-Linkledin: \textbf{\href{https://www.linkedin.com/in/vishal-kathpalia-ervk01}{linkledin/Er-Vishal-Kathpalia}} 
+Email: \textbf{\href{mailto:vishalkathpalia99@gmail.com}{\custombold{vishalkathpalia99@gmail.com}}} \\
+College Email: \textbf{\href{mailto:vishal.11808850@lpu.in}{\custombold{vishal.11808850@lpu.in}}} \\
+Linkledin: \textbf{\href{https://www.linkedin.com/in/vishal-kathpalia-ervk01}{\custombold{linkledin/Er-Vishal-Kathpalia}}} 
 \sectionsep
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     LINKS
@@ -45,7 +46,7 @@ Linkledin: \textbf{\href{https://www.linkedin.com/in/vishal-kathpalia-ervk01}{li
 
 Github: \href{https://github.com/Er-Vishal-Kathpalia}{\custombold{github/Er-Vishal-Kathpalia}}\\
 Hackerrank: \href{https://www.hackerrank.com/er_kathpalia}{\custombold{hackerrank/Vishal-Kathpalia}}\\
-Codechef: \href{https://www.codechef.com/users/er_kathpalia}{\custombold{codechef/Er-Vishal-Kathpalia}}\\ 
+Codechef: \href{https://www.codechef.com/users/er_kathpalia}{\custombold{codechef/Er-Vishal-Kathpalia}} 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     SKILLS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -58,7 +59,7 @@ Windows, Linux, MacOS
 C/C++, Java, Python, R programming
 \vspace{4pt}
 \subsection{Framework}
-HTML, CSS, JavaScript,
+HTML, CSS, JavaScript \\
 Web-development
 \vspace{4pt}
 \subsection{Databases}
@@ -66,7 +67,7 @@ MySQL, MangoDB, Oracle
 \vspace{4pt}
 \subsection{Tools}
 Devops, Git, Maven, Docker \\Unity(Games), Tableau\\
-MSOffice/Office365, Excel(Pivot Table) \\
+MSOffice/Office365, Excel(Pivot Table)
 \sectionsep
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Organization
@@ -84,8 +85,8 @@ Technical Intern at PentaOmnia
 Data Structures and Algorithm\\
 Object Oriented Programming using C++\\
 Data Cleaning and Analysis\\
-DevOps tools (Git,Maven,Docker,Jenkins)\\
-Database Managment System (MySql)\\
+DevOps \\
+Database Managment System\\
 Operating Systems\\
 Good Communication $\&$ Leadership Skills
 \sectionsep
@@ -132,7 +133,7 @@ English, Hindi, Punjabi
 This project is made from the python language by using SpeechRecognition, Pyaudio and Pyqt5 libraries. It is the GUI based application work as like the Microsoft Cortana. It contains different section and can be used as an assistant for the Computer.
 \end{minipage}
 \descriptright{Python, SpeechRecognition, pyaudio, PyQt5}\\ 
-Github Link: \href{https://github.com/Er-Vishal-Kathpalia/Speech-Recognition}{\custombold{Speech-Recognition-Software}}\\
+Github Link: \href{https://github.com/Er-Vishal-Kathpalia/Speech-Recognition}{\custombold{github.com/Speech-Recognition-Software}}\\
 
 \sectionsep
 \datecolor{} \runsubsection{Arduino Based Servo Door Lock System with Keypad and Bluetooth Android App}
@@ -153,7 +154,7 @@ The project is based on IOT. This project can be used for the security purpose i
 The project is based upon the user-friendly construction website using HTML tags and by using CSS and javascript.This website contains the login page for employees and many other pages linked with homepage.
 \end{minipage}
 \descriptright{HTML, CSS, JavaScript}\\
-Github Link: \href{https://github.com/Er-Vishal-Kathpalia/HTML_CSS}{\custombold{HTML Project}}\\
+Github Link: \href{https://github.com/Er-Vishal-Kathpalia/HTML_CSS}{\custombold{github.com/HTML-CSS-Project}}\\
 \sectionsep
 
 \datecolor{} \runsubsection{Library Management System}
@@ -161,10 +162,10 @@ Github Link: \href{https://github.com/Er-Vishal-Kathpalia/HTML_CSS}{\custombold{
 \noindent
 \hspace{0em}%
 \begin{minipage}{0.95\textwidth\vspace{2pt}}
-Created with C and C++ language for the successful completion of college subject of C and C++ programming language.
+This project is Created with C++ using object oriented programming concepts for the successful completion of college subject of C and C++ programming language.
 \end{minipage}
 \descriptright{Object Oriented Programming, C++}\\
-Github Link: \href{https://github.com/Er-Vishal-Kathpalia/Library_Managment_System}{\custombold{Library-Managment-System using OOPS}}\\
+Github Link: \href{https://github.com/Er-Vishal-Kathpalia/Library_Managment_System}{\custombold{github.com/Library-Managment-System}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Education
@@ -198,19 +199,29 @@ Marks-89/100%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Certification/Achievement}
 \noindent\rule{12.5cm}{0.4pt}
-\datecolor{} \runsubsection{NPTEL Certification on Data structures and Algorithms}
+\datecolor{} \runsubsection{GeeksForGeeks Self Placed Data Structure Course}
+\href{https://media.geeksforgeeks.org/courses/certificates/7e0c1b60db575360591b18b9aa976a2f.pdf}{Link}
 \descript{DS-Algo}
 \noindent
 \hspace{0em}%
-\begin{minipage}{0.95\textwidth\vspace{5pt}}
-The certificate is issued by NPTEL for successfully completed the course of data structure and algorithm with python with Elite Grade. 
+\begin{minipage}{0.95\textwidth\vspace{2.5pt}}
+The Certificate from GeekforGeeks for completing self placed course.
+\end{minipage}
+\datecolor{} \runsubsection{NPTEL Certification on Data structures and Algorithms}
+\href{https://nptel.ac.in/noc/E_Certificate/NPTEL19CS40S11330023191131923}{Link}
+\descript{DS-Algo}
+\noindent
+\hspace{0em}%
+\begin{minipage}{0.95\textwidth\vspace{2.5pt}}
+Certificate for NPTEL course of Data Structure and algo with python.
 \end{minipage}
 \datecolor{} \runsubsection{CERTIFICATE OF REPRESENTING SCIENCE PROJECT}
+\href{https://ibb.co/DYRmZzF}{Link}
 \descript{Physics}
 \noindent
 \hspace{0em}%
-\begin{minipage}{0.95\textwidth\vspace{5pt}}
-The Certificate is issued by the CBSE affiliated school named as Swami Vivekanand Public School, Yamuna nagar for winning the third price in representing tesla coil in School Exhibition.
+\begin{minipage}{0.95\textwidth\vspace{2.5pt}}
+Certificate for representing tesla coil as project at district level.
 \end{minipage}
 \end{minipage} 
 \end{document}  
